# aurora-bot

./: .gitignore  CHANGELOG.md  Cargo.toml  README.cargo.md  README.md  README.simple.md  build.sh
.changeln/: changeln.mako  changeln.yaml
src/: main.rs  tui.rs
src/_other/: utils.rs
src/app/: mod.rs
src/app/api/: convert.rs  create.rs  enums.rs  handler.rs  incoming.rs  outgoing.rs
src/app/device/: methods.rs
src/app/emulator/: methods.rs
src/app/settings/: methods.rs
src/cli/: args.rs  device.rs  emulator.rs  flutter.rs  mod.rs  psdk.rs  sdk.rs
src/cmd/: args.rs  mod.rs
src/faq/: args.rs
src/feature/: incoming.rs  mod.rs  outgoing.rs
src/feature/app_auth_login/: incoming.rs
src/feature/app_auth_logout/: incoming.rs
src/feature/app_info/: incoming.rs  outgoing.rs
src/feature/app_open_dir/: incoming.rs
src/feature/app_open_file/: incoming.rs
src/feature/cli/: args.rs  emulator.rs  flutter.rs  psdk.rs  sdk.rs
src/feature/cmd/: args.rs
src/feature/demo_app_info/: incoming.rs  outgoing.rs
src/feature/device_info/: incoming.rs  outgoing.rs
src/feature/device_package_install/: incoming.rs
src/feature/device_package_run/: incoming.rs
src/feature/device_package_uninstall/: incoming.rs
src/feature/device_screenshot/: incoming.rs  outgoing.rs
src/feature/device_sync/: incoming.rs
src/feature/device_terminal/: incoming.rs
src/feature/device_upload/: incoming.rs
src/feature/emulator_close/: incoming.rs
src/feature/emulator_info/: incoming.rs  outgoing.rs
src/feature/emulator_open/: incoming.rs
src/feature/emulator_package_install/: incoming.rs
src/feature/emulator_package_run/: incoming.rs
src/feature/emulator_package_uninstall/: incoming.rs
src/feature/emulator_record_start/: incoming.rs
src/feature/emulator_record_stop/: incoming.rs  outgoing.rs
src/feature/emulator_screenshot/: incoming.rs  outgoing.rs
src/feature/emulator_sync/: incoming.rs
src/feature/emulator_terminal/: incoming.rs
src/feature/emulator_upload/: incoming.rs
src/feature/faq/: args.rs
src/feature/flutter_available/: incoming.rs  outgoing.rs
src/feature/flutter_download/: incoming.rs
src/feature/flutter_info/: incoming.rs  outgoing.rs
src/feature/flutter_install/: incoming.rs
src/feature/flutter_project_format/: incoming.rs
src/feature/flutter_project_report/: incoming.rs  outgoing.rs
src/feature/flutter_remove/: incoming.rs
src/feature/flutter_sync/: incoming.rs
src/feature/flutter_terminal/: incoming.rs
src/feature/flutter_uninstall/: incoming.rs
src/feature/psdk_available/: incoming.rs  outgoing.rs
src/feature/psdk_download/: incoming.rs
src/feature/psdk_info/: incoming.rs  outgoing.rs
src/feature/psdk_install/: incoming.rs
src/feature/psdk_package_sign/: incoming.rs
src/feature/psdk_remove/: incoming.rs
src/feature/psdk_sudoers_add/: incoming.rs
src/feature/psdk_sudoers_remove/: incoming.rs
src/feature/psdk_sync/: incoming.rs
src/feature/psdk_target_package_find/: incoming.rs  outgoing.rs
src/feature/psdk_target_package_install/: incoming.rs
src/feature/psdk_target_package_search/: incoming.rs
src/feature/psdk_target_package_uninstall/: incoming.rs
src/feature/psdk_terminal/: incoming.rs
src/feature/psdk_uninstall/: incoming.rs
src/feature/sdk_available/: incoming.rs  outgoing.rs
src/feature/sdk_download/: incoming.rs
src/feature/sdk_ide_close/: incoming.rs
src/feature/sdk_ide_open/: incoming.rs
src/feature/sdk_info/: incoming.rs  outgoing.rs
src/feature/sdk_install/: incoming.rs
src/feature/sdk_project_format/: incoming.rs
src/feature/sdk_remove/: incoming.rs
src/feature/sdk_sync/: incoming.rs
src/feature/sdk_terminal/: incoming.rs
src/feature/sdk_tools/: incoming.rs
src/models/: configuration.rs  emulator.rs  incoming.rs  mod.rs  outgoing.rs
src/service/: mod.rs
src/svc/: args.rs  mod.rs
src/tools/: constants.rs  enums.rs  ffmpeg_utils.rs  format_utils.rs  gen_pdf.rs  macros.rs  mod.rs  programs.rs  single.rs  telegram.rs  terminal.rs  utils.rs
src/utils/: constants.rs  macros.rs  methods.rs  mod.rs  programs.rs  requests.rs  single.rs
(+215 files in other folders)
