[package]
name = "aurora-bot"
description = "Fast, smart, lightweight, client of the Aurora Bot project."
repository = "https://github.com/keygenqt/aurora-bot"
version = "0.0.1"
authors = ["Vitaliy Zarubin <keygenqt@yandex.ru"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
clap-cargo = "0.15.2"
color-eyre = "0.6.3"
colored = "3.0.0"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.136"
reqwest_cookie_store = "0.8.0"
reqwest-websocket = "0.4.4"
futures-util = "0.3.31"
erased-serde = "0.4.5"
dialoguer = "0.11.0"
nipper = "0.1.9"
regex = "1.11.1"
dbus = { version = "0.9", features=["futures"] }
dbus-tokio = "0.7.6"
dbus-crossroads = "0.5.2"
futures = "0.3.31"
