[package]
name = "aurora-bot"
description = "Fast, smart, lightweight, client of the Aurora Bot project."
repository = "https://github.com/keygenqt/aurora-bot"
version = "0.0.1"
authors = ["Vitaliy Zarubin <keygenqt@yandex.ru"]
license = "Apache-2.0"
edition = "2021"

[profile.release]
# https://github.com/johnthagen/min-sized-rust#strip-symbols-from-binary
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
# https://crates.io/crates/futures
futures = "0.3.31"
# https://crates.io/crates/colored
colored = "3.0.0"
# https://crates.io/crates/regex
regex = "1.11.1"
# https://crates.io/crates/futures-util
futures-util = "0.3.31"
# https://crates.io/crates/dialoguer
dialoguer = "0.11.0"
# https://crates.io/crates/nipper
nipper = "0.1.9"
# https://crates.io/crates/color-eyre
color-eyre = "0.6.3"
# https://crates.io/crates/dbus-tokio
dbus-tokio = "0.7.6"
# https://crates.io/crates/dbus-crossroads
dbus-crossroads = "0.5.2"
# https://crates.io/crates/dbus
dbus = { version = "0.9", features=["futures"] }
# https://crates.io/crates/serde_json
serde_json = "1.0.136"
# https://crates.io/crates/serde
serde = { version = "1.0.217", features = ["derive"] }
# https://crates.io/crates/reqwest
reqwest = { version = "0.12", features = ["json", "cookies"] }
# https://crates.io/crates/reqwest_cookie_store
reqwest_cookie_store = "0.8.0"
# https://crates.io/crates/reqwest-websocket
reqwest-websocket = "0.4.4"
# https://crates.io/crates/tokio
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "io-std"] }
# https://crates.io/crates/clap
clap = { version = "4.5.26", features = ["derive"] }
# https://crates.io/crates/clap-cargo
clap-cargo = "0.15.2"
# https://crates.io/crates/russh
russh = "0.50.0"
