[package]
name = "aurora-bot"
description = "Fast, smart, lightweight, client of the Aurora Bot project."
repository = "https://github.com/keygenqt/aurora-bot"
version = "0.0.6"
authors = ["Vitaliy Zarubin <keygenqt@yandex.ru"]
license = "Apache-2.0"
edition = "2024"

[profile.release]
# https://github.com/johnthagen/min-sized-rust#strip-symbols-from-binary
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
futures = "0.3.31"
colored = "3.0.0"
regex = "1.11.1"
futures-util = "0.3.31"
dialoguer = "0.11.0"
nipper = "0.1.9"
color-eyre = "0.6.3"
dbus-tokio = "0.7.6"
dbus-crossroads = "0.5.2"
dbus = { version = "0.9", features=["futures"] }
serde_json = "1.0.136"
serde_variant = "0.1.3"
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "cookies", "stream"] }
reqwest_cookie_store = "0.8.0"
reqwest-websocket = "0.4.4"
tokio = { version = "1.0", features = ["macros"] }
clap = { version = "4.5.26", features = ["derive"] }
clap-cargo = "0.15.2"
russh = "0.50.0"
russh-sftp = "2.0.8"
walkdir = "2.5.0"
md5 = "0.7.0"
maplit = "1.0.2"
base64 = "0.22.1"
human-sort = "0.2.2"
chrono = "0.4.39"
ffmpeg-next = "7.1.0"
gifski = "1.32.0"
image = "0.25.5"
imageproc = "0.25.0"
minimp4 = "0.1.2"
openh264 = "0.8.0"
term = "1.0.1"
url = "2.5.4"
cached = "0.54.0"
rpm = "0.16.0"
